hack/kind/deploy/loqu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loqu
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: loqu
